RESOLVED FIXED48464
AX: multi select group option does not handle setting of AXSelectedChildren correctly
https://bugs.webkit.org/show_bug.cgi?id=48464
Summary AX: multi select group option does not handle setting of AXSelectedChildren c...
chris fleizach
Reported 2010-10-27 14:14:35 PDT
When calling AXUIElementSetAttributeValue with an array of one of the AXStaticText uiElement on kAXSelectedChildrenAttribute, this "multi-select" list incorrectly selects multiple non-contiguous items in the list. <rdar://problem/8489856>
Attachments
Patch (13.46 KB, patch)
2010-10-27 14:26 PDT, chris fleizach
no flags
Patch (13.60 KB, patch)
2010-10-27 14:27 PDT, chris fleizach
adele: review+
chris fleizach
Comment 1 2010-10-27 14:26:04 PDT
chris fleizach
Comment 2 2010-10-27 14:27:45 PDT
chris fleizach
Comment 3 2010-10-28 11:55:00 PDT
Note You need to log in before you can comment on or make changes to this bug.