AX: multi select group option does not handle setting of AXSelectedChildren correctly https://bugs.webkit.org/show_bug.cgi?id=48464

Reviewed by Adele Peterson.

WebCore:

Ensure that when selecting an item from a <select> element, it accounts for <optgroups>.

Test: platform/mac/accessibility/select-element-selection-with-optgroups.html

* accessibility/AccessibilityListBoxOption.cpp:
(WebCore::AccessibilityListBoxOption::setSelected):

WebKitTools:

Add support for querying information about selected children to DRT, including:
   selectedChildAtIndex
   selectedChildrenCount
   setSelectedChild

* DumpRenderTree/AccessibilityUIElement.cpp:
(selectedChildAtIndexCallback):
(setSelectedChildCallback):
(selectedChildrenCountCallback):
(AccessibilityUIElement::setSelectedChild):
(AccessibilityUIElement::selectedChildrenCount):
(AccessibilityUIElement::selectedChildAtIndex):
(AccessibilityUIElement::getJSClass):
* DumpRenderTree/AccessibilityUIElement.h:
* DumpRenderTree/mac/AccessibilityUIElementMac.mm:
(AccessibilityUIElement::selectedChildAtIndex):
(AccessibilityUIElement::selectedChildrenCount):
(AccessibilityUIElement::setSelectedChild):

LayoutTests:

* platform/mac/accessibility/select-element-selection-with-optgroups-expected.txt: Added.
* platform/mac/accessibility/select-element-selection-with-optgroups.html: Added.



Canonical link: https://commits.webkit.org/61306@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@70792 268f45cc-cd09-0410-ab3c-d52691b4dbfc