WebKitTools/DumpRenderTree/AccessibilityUIElement.h
@@ -130,9 +130,14 @@ public:
     JSStringRef selectedTextRange();
     bool isEnabled();
     bool isRequired() const;
+    
     bool isSelected() const;
     bool isSelectable() const;
     bool isMultiSelectable() const;
+    void setSelectedChild(AccessibilityUIElement*) const;
+    unsigned selectedChildrenCount() const;
+    AccessibilityUIElement selectedChildAtIndex(unsigned) const;
+    
     bool isExpanded() const;
     bool isChecked() const;
     bool isVisible() const;
